--- a/.github/workflows/mainfour.yml
+++ b/.github/workflows/mainfour.yml
@@ -1,19 +1,19 @@
-
-name: CI
+name: CI Pipeline
 
 on: [push]
 
 jobs:
+  # === STATIC CODE ANALYSIS (BANDIT) ===
   sast_scan:
-    name: Run Bandit Scan
+    name: Run Bandit SAST Scan
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout Source Code
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v5
         with:
           python-version: 3.8
 
@@ -21,36 +21,39 @@ jobs:
         run: pip install bandit
 
       - name: Run Bandit Scan
-        run: bandit -ll -ii -r . -f json -o bandit-report.json
+        run: |
+          bandit -ll -ii -r . -f json -o bandit-report.json
 
-      - name: Upload Artifact
+      - name: Upload Bandit Report as Artifact
         uses: actions/upload-artifact@v4
-        if : always()
+        if: always()
         with:
           name: bandit-findings
           path: bandit-report.json
 
-
-
+  # === DOCKER IMAGE SCAN (DOCKER SCOUT) ===
   image_scan:
-    name: Build Image and Run Image Scan
+    name: Build Image and Scan with Docker Scout
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout Source Code
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses:  docker/setup-buildx-action@v3
-
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: image=moby/buildkit:latest
 
       - name: Build Docker Image
         run: docker build -f Dockerfile -t myapp:latest .
 
-
-      - name: Docker Scout Scan
+      - name: Install Docker Scout CLI
         run: |
           curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
           sh install-scout.sh
-          docker scout quickview
-          docker scout cves
+
+      - name: Run Docker Scout QuickView and CVE Scan
+        run: |
+          docker scout quickview myapp:latest
+          docker scout cves myapp:latest
