--- a/.github/workflows/mainfour.yml
+++ b/.github/workflows/mainfour.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker
+      - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v3
         with:
           docker_version: '25.0.5'
