--- a/.github/workflows/mainfour.yml
+++ b/.github/workflows/mainfour.yml
@@ -22,13 +22,12 @@ jobs:
       - name: Run Bandit Scan
         run: bandit -ll -ii -r . -f json -o bandit-report.json
 
-      - name: Upload Artifact
+      - name: Upload Bandit Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: bandit-findings
           path: bandit-report.json
-
 
   sca_scan:
     name: Run Safety Scan
@@ -47,16 +46,16 @@ jobs:
         run: pip install safety
 
       - name: Run Dependencies Scan
-        run: safety check -r requirements.txt --output json > sca-report.json
+        run: |
+          pip install -r requirements.txt
+          safety check -r requirements.txt --output json > sca-report.json
 
-      - name: Upload Artifact
+      - name: Upload Safety Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: safety-check-findings
           path: sca-report.json
-
-          
 
   image_scan:
     name: Build Image and Run Image Scan
@@ -74,10 +73,9 @@ jobs:
       - name: Build Docker Image
         run: docker build -f Dockerfile -t myapp:latest .
 
-      - name: Docker Scout Scan
+      - name: Install and Run Docker Scout
         run: |
           curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
           sh install-scout.sh
-          
-          docker scout quickview
-          docker scout cves
+          docker scout quickview myapp:latest
+          docker scout cves myapp:latest
