--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -75,9 +75,19 @@ jobs:
       - name: Build Docker Image
         run: docker build -f Dockerfile -t myapp:latest .
 
-      - name: Docker Scout Scan
-        uses: docker/scout-action@v1.0.9
-        with:
-          dockerhub-user: ${{ secrets.REPO_USER }}
-          dockerhub-password: ${{ secrets.REPO_PWD }}
-          command: quickview,cves
+      - name: Install and Run Docker Scout
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+          sh install-scout.sh
+          
+           echo ${{ secrets.REPO_PWD }} | docker login -u ${{ secrets.REPO_USER }} --password-stdin
+
+           docker scout quickview myapp:latest
+           docker scout cves myapp:latest
+
+
+
+
+           
+
+
