--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -87,7 +87,10 @@ jobs:
 
 
 
-
-           
-
+      - name: Docker Scout Scan
+        uses: docker/scout-action@v1.0.9
+        with:
+          dockerhub-user: ${{ secrets.REPO_USER }}
+          dockerhub-password: ${{ secrets.REPO_PWD }}
+          command: quickview,cves
 
