--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -93,4 +93,13 @@ jobs:
           dockerhub-user: ${{ secrets.REPO_USER }}
           dockerhub-password: ${{ secrets.REPO_PWD }}
           command: quickview,cves
+          only-severities: critical,high
+          sarif-file: scout-report.sarif
+          exit-code: true
 
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: docker-scout-findings
+          path: scout-report.sarif
